theme: I'll name it 'Forest'

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -13,13 +13,7 @@
   <!-- nav zone -->
   <div id="navbar">
     <ul>
-      <li>List item </li>
-      <li>List item </li>
-      <li>List item </li>
-      <li>List item </li>
-      <li>List item </li>
-      <li>List item </li>
-      <li>List item </li>
+      <li><a href="/">Articles</a></li>
     </ul>
   </div>
 
