--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -12,8 +12,8 @@
 <body>
   <!-- nav zone -->
   <div id="navbar">
-    <ul>
-      <li><a href="/">Articles</a></li>
+    <ul class="nav">
+      <li><a href="/">Blog Home</a></li>
     </ul>
   </div>
 
