--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,16 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
+  font-family: serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.title {
+  color: #565656;
 }
 
 #navbar {
@@ -17,7 +27,7 @@ body {
   float: left;
   height: 100%;
   width: 20%;
-  background: linear-gradient(45deg, #F500FF, #00ADFF);
+  background: -webkit-linear-gradient(45deg, #F500FF, #00ADFF);
 }
 
 #main {
@@ -28,7 +38,7 @@ body {
   margin-left: 20%;
 }
 
-#navbar ul {
+#navbar .nav {
   float: right;
   list-style: none;
 
@@ -40,50 +50,85 @@ body {
   box-sizing: border-box;
 }
 
-#navbar ul li {
+#navbar .nav li {
   float: right;
   text-align: right;
   width: 100%;
-  min-height: 50px;
+  height: auto;
   color: white;
   font-family: 'Helvetica';
   font-size: 1.2em;
+  opacity: 0.6;
+  text-shadow: none;
+  -webkit-transition: all 0.2s ease-in-out;
+}
+#navbar .nav li:hover {
+  opacity: 1;
+  text-shadow: 1px 1px gray, 2px 2px gray;
+  -webkit-transition: all 0.2s ease-in-out;
 }
 
-#main .item {
+#main .meta {
+  color: #9c9c9c;
+}
+
+#items {
   float: left;
-  width: 100%;
-  min-height: 20%;
-  height: auto;
-  border-bottom: 1px solid silver;
-  box-sizing: border-box;
-  padding-left: 5%;
-  padding-bottom: 2%;
-  font-family: 'Helvetica';
-}
-
-.item h2 {
-  text-align: left;
-  vertical-align: middle;
-  margin-left: 0;
-  font-weight: normal;
-  width: 100%;
-  height: 30px;
-}
-
-ul.meta {
   list-style: none;
   width: 100%;
-  float: left;
-  margin-top: 0;
-  margin-right: 0;
+  height: auto;
+  box-sizing: border-box;
   margin-left: 0;
   padding-left: 0;
-}
-ul.meta li {
-  float: left;
+  margin-top: 0;
 }
 
+#items li {
+  position: relative;
+  padding: 40px;
+  border-bottom: 1px solid silver;
+}
+#items li:hover {
+  cursor: pointer;
+}
+#items li:before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  display: block;
+
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+
+  background: -webkit-linear-gradient(30deg, #F5F6ED, #cdf5ff);
+  opacity: 0;
+  -webkit-transition: all 0.15s ease-in-out;
+}
+#items li:hover:before {
+  opacity: 1;
+  cursor: pointer;
+  -webkit-transition: all 0.15s ease-in-out;
+}
+#items li h2 {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+.meta{
+  font-style: italic;
+}
+.meta:hover {
+  pointer: default;
+}
+.meta .category {
+  color: gray;
+}
+.meta .category:hover {
+  color: black; 
+}
 .content {
   float: left;
   font-size: 1.1em;
@@ -103,60 +148,15 @@ p > code {
   color: white;
 
 }
-.item .whole-article-promote {
-  font-style: italic;
-  color: blue;
-  text-decoration: none;
-}
-.item .whole-article-promote:hover {
-  text-decoration: underline;
-}
-
-.meta .timestamp {
-  font-style: italic;
-  margin-right: 10px;
-}
-.item h2 a {
-  color: inherit;
-  text-decoration: none;
-}
 
 #main .post {
   height: 100%;
   width: 100%;
   margin: 0;
-  padding: 2% 8% 0 8%;
+  padding: 2% 15% 0 15%;
   box-sizing: border-box;
 }
 
-.post h1.title {
+.post .title {
   font-weight: normal;
-}
-
-.post ul.meta {
-  float: left;
-  width: 100%;
-  height: auto;
-  margin-top: 0;
-  list-style: none;
-}
-
-.post ul.meta li { 
-  float: left;
-}
-
-.item h3:hover {
-  cursor: pointer;
-}
-
-#navbar ul a {
-  color: white;
-  text-decoration: none;
-}
-#navbar ul a:visited {
-  color: white;
-}
-
-#navbar ul a:hover {
-  text-decoration: none; 
 }
