theme: Add category plugin
Since Github Pages doesn't support plugins
I'll have to generate the _site myself and push that to master branch.
Source file will be kept in source branch.

--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -3,8 +3,11 @@ layout: pages
 title: Anran's Life
 ---
 
+<div class="page-brand">
+  Posts of category {{ page.category }}
+</div>
 <ul id="items">
-{% for post in site.posts %}
+{% for post in site.categories.[page.category] %}
   <li> 
     <a href="{{ post.url }}">
       <h2 class="title">{{ post.title }}</h2>
