--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: pages
   <small class="meta">
     <span class="timestamp">{{ page.date | date_to_long_string }}</span>
     {% for cate in page.categories %}
-    <span class="category">{{ cate }}</span>
+    <a href="/categories/{{ cate }}/"><span class="category">{{ cate }}</span></a>
     {% endfor %}
   </small>
 
