--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,4 +15,19 @@ layout: pages
   <div class="content">
     {{ content }}
   </div>
+  
+  <ul class="post-nav">
+    <li class="previous">
+      {% if page.previous %}
+      <small>The previous post is</small>
+      <a href="{{ page.previous.url }}"><span class="title">{{ page.previous.title }}</span></a>
+      {% endif %}
+    </li>
+    <li class="next">
+      {% if page.next %}
+      <small>The next post is</small>
+      <a href="{{ page.next.url }}"><span class="title">{{ page.next.title }}</span></a>
+      {% endif %}
+    </li>
+  </ul>
 </div>
