theme: optimize layout

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -10,17 +10,21 @@
 </head>
 
 <body>
-  <!-- nav zone -->
-  <div id="navbar">
-    <ul class="nav">
-      <li><a href="/">Blog Home</a></li>
-    </ul>
-  </div>
 
-  <div id="main">
+<div id="wrapper">
+  <div id="wrapper-inner">
+
+    <!-- nav zone -->
+    <div id="navbar">
+      <ul class="nav">
+        <li><a href="/">Blog Home</a></li>
+      </ul>
+    </div>
+
     {{ content }}
-  </div>
 
+  </div><!-- End of #wrapper-inner -->
+</div><!-- End of #wrapper -->
   <script src="script.js"></script>
 </body>
 </html>
