blog: update blogger description

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -18,6 +18,15 @@
     <div id="navbar">
       <ul class="nav">
         <li><a href="/">Blog Home</a></li>
+        <li><a href="/categories">Caregory</a></li>
+      </ul>
+
+      <ul class="desc">
+        <li>电影爱好者，间歇性死理性派</li>
+        <li>半素食主义者, 跑步成瘾</li>
+        <li>性格温和，人畜无害</li>
+        <li><a href="https://github.com/qar">Github</a></li>
+        <li><a href="http://www.douban.com/people/qar/">豆瓣</a></li>
       </ul>
     </div>
 
