--- a/css/main.scss
+++ b/css/main.scss
@@ -73,7 +73,7 @@ ul {
   float: left;
   height: 100%;
   width: 20%;
-  @include linear-gradient(45deg, #F500FF, #00ADFF);
+  background-color: #08B494;
 }
 
 #wrapper-inner {
