--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -4,7 +4,17 @@
   <title>{{ page.title }}</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
+  <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  {% for category in page.categories %}
+  <meta property="article:tag" content="{{ category }}" />
+  {% endfor %}
 
+  {% if page.description %}
+  <meta name="description" content="{{ page.description | truncatewords: 200 | strip_newlines | escape_once }}" />
+  {% else %}
+  <meta name="description" content="{{ content | strip_html | truncatewords: 200 | strip_newlines | escape_once }}" />
+  {% endif %}
   <link type="text/css" rel="stylesheet" href="/css/syntax.css">
   <link type="text/css" rel="stylesheet" href="/css/main.css">
 </head>
@@ -13,7 +23,6 @@
 
 <div id="wrapper">
   <div id="wrapper-inner">
-
     <!-- nav zone -->
     <div id="navbar">
       <ul class="nav">
