--- a/css/main.scss
+++ b/css/main.scss
@@ -44,6 +44,10 @@ body {
   font-family: $bodyfont;
 }
 
+div {
+  -webkit-overflow-scrolling: touch;
+}
+
 a {
   text-decoration: none;
   color: inherit;
