--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+<head>
+  <meta charset="utf-8" />
+  <title>{{ title }}</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width">
+  <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  {% for category in page.categories %}
+  <meta property="article:tag" content="{{ category }}" />
+  {% endfor %}
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+  {% if page.description %}
+  <meta name="description" content="{{ page.description | truncatewords: 200 | strip_newlines | escape_once }}" />
+  {% else %}
+  <meta name="description" content="{{ content | strip_html | truncatewords: 200 | strip_newlines | escape_once }}" />
+  {% endif %}
+  <link type="text/css" rel="stylesheet" href="/css/syntax.css">
+  <link type="text/css" rel="stylesheet" href="/css/style.css">
+</head>
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+<body>
+  <div id="main">
+    <div class="hero">
+      <h1>Anran's Life</h1>
+    </div>
 
-    </head>
-    <body>
+    <ul class="navbar">
+      <li><a href="/">首页</a></li>
+    </ul>
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
+    {{ content }}
 
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
-        </div>
-
-    </body>
+    <div class="footer">
+      <p>&copy;2015 powered by <a href="http://jekyllrb.com/">Jekyll</a> with homemade theme</p>
+    </div>
+  </div>
+</body>
 </html>
