--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,9 @@
           box-sizing: $property;
 }
 
+/*----------------------------------------------------------------------
+                            Style Overide
+----------------------------------------------------------------------*/
 body {
     margin: 0;
     padding: 0;
@@ -25,6 +28,70 @@ body {
     font-size: 15px;
 }
 
+ul {
+    list-style: none;
+}
+
+img {
+    max-width: 100%;
+    display: block;
+    border-radius: 4px;
+    margin: 0 auto;
+}
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+/*----------------------------------------------------------------------
+                       12  grid system
+----------------------------------------------------------------------*/
+.size-1 {
+    width: 1 / 12 * 100%;
+}
+.size-2 {
+    width: 2 / 12 * 100%;
+}
+.size-3 {
+    width: 3 / 12 * 100%;
+}
+.size-4 {
+    width: 4 / 12 * 100%;
+}
+.size-5 {
+    width: 5 / 12 * 100%;
+}
+.size-6 {
+    width: 6 / 12 * 100%;
+}
+.size-7 {
+    width: 7 / 12 * 100%;
+}
+.size-8 {
+    width: 8 / 12 * 100%;
+}
+.size-9 {
+    width: 9 / 12 * 100%;
+}
+.size-10 {
+    width: 10 / 12 * 100%;
+}
+.size-11 {
+    width: 11 / 12 * 100%;
+}
+.size-12 {
+    width: 100%;
+}
+
+.size-1, .size-2, .size-3, .size-4,
+.size-5, .size-6, .size-7, .size-8,
+.size-9, .size-10, .size-11, .size-12 {
+    float: left;
+    @include box-sizing(border-box);
+}
+
+.sidebar {
+}
 .hero {
     background: url('/img/hero.jpg') no-repeat center;
     background-size: cover;
@@ -85,9 +152,12 @@ body {
     }
 }
 
+/*----------------------------------------------------------------------
+                            layout
+----------------------------------------------------------------------*/
 .posts {
     margin: 0;
-    padding: 2em 8em;
+    padding: 2em;
     @include box-sizing(border-box);
 
     .post-preview {
@@ -116,21 +186,6 @@ body {
 
 .read-more {
     font-style: italic;
-}
-
-ul {
-    list-style: none;
-}
-
-img {
-    max-width: 100%;
-    display: block;
-    border-radius: 4px;
-    margin: 0 auto;
-}
-a {
-    color: inherit;
-    text-decoration: none;
 }
 
 // desktop
