--- a/css/style.scss
+++ b/css/style.scss
@@ -117,7 +117,7 @@ a {
 .navbar {
     width: 100%;
     height: 3em;
-    background: #444347;
+    background: black;
     padding: 0;
     margin: 0;
 
