--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <div id="main">
+  <div id="wrapper">
     <div class="hero">
       <h1>Anran's Life</h1>
     </div>
@@ -31,9 +31,10 @@
 
     {{ content }}
 
-    <div class="footer">
-      <p>&copy;2015 powered by <a href="http://jekyllrb.com/">Jekyll</a> with homemade theme</p>
+    <div class="size-12 footer">
+      <p>&copy;2015 Powered by <a href="http://jekyllrb.com/">Jekyll</a> with homemade theme</p>
     </div>
   </div>
+
 </body>
 </html>
