--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     {{ content }}
 
     <div class="size-12 footer">
-      <p>&copy;2015 Powered by <a href="http://jekyllrb.com/">Jekyll</a> with homemade theme</p>
+      <p>powered by <a href="http://jekyllrb.com/">jekyll</a> with homemade theme</p>
     </div>
   </div>
 
