--- a/css/style.scss
+++ b/css/style.scss
@@ -185,6 +185,7 @@ a {
 #main {
     background: white;
     margin-bottom: 5em;
+    box-shadow: 0 0 10px #A0A0A0;
 }
 
 .aside {
@@ -228,6 +229,7 @@ a {
         width: 90%;
         background: white;
         margin: 0 auto;
+        box-shadow: 0 0 10px #A0A0A0;
     }
 
 }
