--- a/css/style.scss
+++ b/css/style.scss
@@ -43,8 +43,8 @@ li {
 img {
     max-width: 100%;
     display: block;
-    border-radius: 4px;
-    margin: 0 auto;
+    margin: 2em auto;
+    box-shadow: 1px 5px 17px #838383;
 }
 a {
     color: inherit;
@@ -158,6 +158,7 @@ a {
     border-bottom: 1px solid #eee;
 
     .content {
+        line-height: 1.8rem;
         text-align: left;
     }
 
