--- a/css/style.scss
+++ b/css/style.scss
@@ -145,7 +145,7 @@ a {
     }
 
     li:not(:last-child) {
-        border-right: 1px solid #EEE;
+        border-right: 1px solid #414141;
     }
 
     a {
