--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,67 @@
           box-sizing: $property;
 }
 
+$titleColor: #52495C;
+$footnoteColor: #938C9B;
+$mainContentColor: #857A90;
+
+/*----------------------------------------------------------------------
+                        fonts
+----------------------------------------------------------------------*/
+/* latin-ext */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Source Serif Pro'), local('SourceSerifPro-Regular'), url(/fonts/source_serif_pro/SourceSerifPro-Regular.ttf) format('truetype');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Source Serif Pro'), local('SourceSerifPro-Regular'), url(/fonts/source_serif_pro/SourceSerifPro-Regular.ttf) format('truetype');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
+/* latin-ext */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Source Serif Pro Semibold'), local('SourceSerifPro-Semibold'), url(/fonts/source_serif_pro/SourceSerifPro-Semibold.ttf) format('truetype');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Source Serif Pro Semibold'), local('SourceSerifPro-Semibold'), url(/fonts/source_serif_pro/SourceSerifPro-Semibold.ttf) format('truetype');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Source Serif Pro Bold'), local('SourceSerifPro-Bold'), url(/fonts/source_serif_pro/SourceSerifPro-Bold.ttf) format('truetype');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Source Serif Pro Bold'), local('SourceSerifPro-Bold'), url(/fonts/source_serif_pro/SourceSerifPro-Bold.ttf) format('truetype');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
+
 /*----------------------------------------------------------------------
                             Style Overide
 ----------------------------------------------------------------------*/
@@ -160,16 +221,25 @@ a {
     .content {
         line-height: 1.8rem;
         text-align: left;
+        p {
+            font-family: "Source Serif Pro", serif;
+            color: $mainContentColor;
+            font-size: 1rem;
+            font-weight: 400;
+        }
     }
 
     .title {
         font-weight: 100;
+        color: $titleColor;
         font-style: normal;
     }
     .meta {
         display: block;
         text-align: left;
         font-style: italic;
+        color: $footnoteColor;
+        font-size: 0.75rem;
     }
 }
 
@@ -191,10 +261,25 @@ a {
         padding-bottom: 1em;
         border-bottom: 1px solid #EEE;
         @include box-sizing(border-box);
+        .preview-title {
+            font-weight: 400;
+            color: $titleColor;
+        }
+        .preview-content {
+            font-family: "Source Serif Pro", serif;
+            font-size: 1rem;
+            font-weight: 400;
+            color: $mainContentColor;
+        }
     }
 
     h1, h2, h3, h4 {
         color: black;
+    }
+
+    .post-date, .read-more {
+        font-size: 0.75rem;
+        color: $footnoteColor;
     }
 }
 
@@ -207,9 +292,6 @@ a {
 .aside {
     margin: 0;
     padding: 2em;
-}
-.preview-title {
-    font-weight: 400;
 }
 
 .footer {
