--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <ul class="navbar">
       <li><a href="/">首页</a></li>
       <li><a href="/tags">标签</a></li>
-      <li><a href="/categories">分类</a></li>
+      <li><a href="/archives">归档</a></li>
     </ul>
 
     {{ content }}
